[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/dialog_handler.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui.gd" type="Script" id=3]
[ext_resource path="res://assets/rainbow1.png" type="Texture" id=4]
[ext_resource path="res://assets/ComicNeue_Light.otf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/room.gd" type="Script" id=6]
[ext_resource path="res://assets/tumblr_pi7j5ud3eK1reukmdo6_250.png" type="Texture" id=7]
[ext_resource path="res://scenes/Button.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 5 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="dialog_handler" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ui" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="sprites" type="Node2D" parent="ui"]

[node name="text_box" type="Node2D" parent="ui"]
position = Vector2( 4.76007, 9.52003 )
__meta__ = {
"_edit_group_": true
}

[node name="box" type="Sprite" parent="ui/text_box"]
position = Vector2( 647.344, 572.614 )
scale = Vector2( 0.754661, 0.281892 )
texture = ExtResource( 4 )

[node name="speaker" type="RichTextLabel" parent="ui/text_box"]
margin_left = 291.0
margin_top = 499.0
margin_right = 557.0
margin_bottom = 521.0
custom_fonts/mono_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "fdfgjlsdfsdf323"
text = "fdfgjlsdfsdf323"

[node name="text" type="RichTextLabel" parent="ui/text_box"]
margin_left = 288.64
margin_top = 519.045
margin_right = 554.64
margin_bottom = 586.045
custom_fonts/mono_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "fdfgjlsdfsdf323"
text = "fdfgjlsdfsdf323"

[node name="area" type="Button" parent="ui/text_box"]
margin_left = 257.0
margin_top = 493.0
margin_right = 1038.0
margin_bottom = 652.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="room" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Button" type="Button" parent="room"]
margin_left = 36.5859
margin_top = 48.7065
margin_right = 176.586
margin_bottom = 182.706
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
script = ExtResource( 8 )

[connection signal="pressed" from="ui/text_box/area" to="." method="update_dialog" binds= [ -1 ]]
[connection signal="pressed" from="room/Button" to="room/Button" method="_on_Button_pressed"]
[connection signal="start_dialog" from="room/Button" to="." method="start_dialog"]
